alertmanager/4-alertmanager-dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-dashboard-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`alertmanager.sillycat.com`)
      kind: Rule
      middlewares:
        - name: basicauth
          namespace: default
      services:
        - name: alertmanager
          port: 9093
